tdf#136282 ww8import: track para bidi, not char bidi for style

This fixes a LO 7.0 regression from tdf#99197.

Apparently I was watching the wrong SPRM for bidi change in styles.
It looks like it should be sprmPFBiDi: A Bool8 value that
specifies whether the paragraph uses right-to-left layout.
By default, a paragraph does not use right-to-left layout.

Instead, I had been using sprmCFBiDi: A ToggleOperand value that
specifies whether the text is formatted with right-to-left layout.
By default, text is displayed from right to left
if the language for the text is a right-to-left language.
[So this one looks like a character run property.]

I no longer remember why I used CfBiDi. Perhaps just because
it sets m_bBiDi which sounds good?
However, there are no existing unit tests that have a CFBiDi
in a style, but there are examples with CFBiDi.

I'm really surprised that QA didn't have any documents
that picked up on this regression. I was counting on that...

Change-Id: If5a115db5962e7e26ca1b280cd9f31d493cee69c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101726
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit fb8334aa79e811bb6780e072e24d2580932f1031)